--- a/BlogApp/app/views/blogs/_form.html.erb
+++ b/BlogApp/app/views/blogs/_form.html.erb
@@ -1,4 +1,12 @@
 <%= form_with(model: @blog, local: true, url: new_or_edit) do |f|%>
+  
+  <% if @blog.errors.any? %>
+    <div class="error_msg">
+      <% @blog.errors.full_messages.each do |msg| %>
+        <p><%= msg %></p>
+      <% end %>
+    </div>
+  <% end %>
 
 <div>
 <%= f.label :title %>
