--- a/BlogApp/app/views/blogs/_form.html.erb
+++ b/BlogApp/app/views/blogs/_form.html.erb
@@ -4,6 +4,7 @@
     <div class="error_msg">
       <% @blog.errors.full_messages.each do |msg| %>
         <p><%= msg %></p>
+        raise
       <% end %>
     </div>
   <% end %>
