revised confirmation page

--- a/BlogApp/app/views/blogs/confirm.html.erb
+++ b/BlogApp/app/views/blogs/confirm.html.erb
@@ -7,4 +7,5 @@
   <p><%= @blog.title.upcase %></p>
   <p><%= @blog.body %></p>
   <%= form.submit "Confirm" %>
+  <%= form.submit "Back", name: 'back' %>
 <% end %>
