--- a/BlogApp/app/views/blogs/index.html.erb
+++ b/BlogApp/app/views/blogs/index.html.erb
@@ -7,13 +7,14 @@
   <thead>
     <th>Title</th>
     <th>Content</th>
-    <th colspan="3"></th>
+    <th colspan="4"></th>
   </thead>
   <tbody>
     <% @blog.each do |blog|%>
       <tr>
         <td><%= blog.title.upcase%></td>
         <td><%= blog.body%></td>
+        <td><%= blog.user.name%></td>
         <td><%= link_to 'Show', blog_path(blog) %></td>
         <td><%= link_to 'Edit', edit_blog_path(blog) %></td>
         <td><%= link_to 'Delete', blog_path(blog), method: :delete, data: {confirm: "Are you sure?"} %></td>
